force-app/main/default/objects/Coverage_Team__c/fields/Tier_Goal__c.field-meta.xml
<CustomField>
    <fullName>Tier_Goal__c</fullName>
    <formula>IF(

OR 
(
  AND(TEXT(Tier__c) = &apos;A&apos;, (TODAY() - Last_Activity__c)  &lt; 90)
, AND(TEXT(Tier__c) = &apos;B&apos;, (TODAY() - Last_Activity__c)  &lt; 180)
, AND(TEXT(Tier__c) = &apos;C&apos;, (TODAY() - Last_Activity__c)  &lt; 365)

)

,&apos;Y&apos;, &apos;N&apos;)</formula>
    <label>Tier Goal</label>
    <type>Text</type>
</CustomField>