force-app/main/default/objects/Coverage_Team__c/fields/Unique_Coverage_Team__c.field-meta.xml
<CustomField>
    <fullName>Unique_Coverage_Team__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Coverage Team</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>