force-app/main/default/objects/Coverage_Team__c/recordTypes/FS_Coverage_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>FS_Coverage_Team_Member</fullName>
    <active>true</active>
    <label>FS Coverage Team Member</label>
</RecordType>