force-app/main/default/objects/Coverage_Team__c/recordTypes/Standard_Coverage_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Standard_Coverage_Team_Member</fullName>
    <active>true</active>
    <label>Standard Coverage Team Member</label>
</RecordType>