force-app/main/default/objects/Coverage_Team__c/validationRules/FS_Coverage_Officer_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Coverage_Officer_Only</fullName>
    <active>false</active>
    <description>Only FS officers allowed to be FS Coverage Officer</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;FS_Coverage_Team_Member&quot;  &amp;&amp;   TEXT(Officer__r.Industry_Group__c ) &lt;&gt; &quot;FS - Financial Sponsors&quot;</errorConditionFormula>
    <errorDisplayField>Officer__c</errorDisplayField>
    <errorMessage>Only FS Officers can be FS Coverage Team Member.  Select a FS officer or change the record type to Standard Coverage Team Member.</errorMessage>
</ValidationRule>