force-app/main/default/objects/Coverage_Team__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Tier__c</columns>
    <columns>Ownership__c</columns>
    <columns>Tier_Goal__c</columns>
    <columns>Primary_Sector__c</columns>
    <columns>Secondary_Sector__c</columns>
    <columns>Last_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>