force-app/main/default/objects/Coverage_Team__c/listViews/All_FS_Coverage_Team.listView-meta.xml
<ListView>
    <fullName>All_FS_Coverage_Team</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Tier__c</columns>
    <columns>Ownership__c</columns>
    <columns>Tier_Goal__c</columns>
    <columns>Last_Activity__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coverage_Team__c.FS_Coverage_Team_Member</value>
    </filters>
    <filters>
        <field>Coverage_Team_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All FS Coverage Team</label>
</ListView>