force-app/main/default/objects/Coverage_Team__c/listViews/Coverage_Calling_List_Split.listView-meta.xml
<ListView>
    <fullName>Coverage_Calling_List_Split</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Tier__c</columns>
    <columns>Ownership__c</columns>
    <columns>Tier_Goal__c</columns>
    <columns>Primary_Sector__c</columns>
    <columns>Secondary_Sector__c</columns>
    <columns>Last_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Officer_is_Running_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coverage_Team__c.Standard_Coverage_Team_Member</value>
    </filters>
    <filters>
        <field>Tier__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Coverage_Team_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Tier_Goal__c</field>
        <operation>equals</operation>
        <value>N</value>
    </filters>
    <label>Coverage Calling List</label>
</ListView>