force-app/main/default/objects/Coverage_Team__c/listViews/Coverage_List_by_Officer.listView-meta.xml
<ListView>
    <fullName>Coverage_List_by_Officer</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Officer__c</columns>
    <columns>Tier__c</columns>
    <columns>Ownership__c</columns>
    <columns>Tier_Goal__c</columns>
    <columns>Primary_Sector__c</columns>
    <columns>Secondary_Sector__c</columns>
    <columns>Last_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coverage_Team_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Coverage List by Officer</label>
</ListView>