force-app/main/default/objects/Coverage_Team__c/listViews/FS_Coverage_Calling_List.listView-meta.xml
<ListView>
    <fullName>FS_Coverage_Calling_List</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 or 6)</booleanFilter>
    <columns>Company__c</columns>
    <columns>Tier__c</columns>
    <columns>Description__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>PrimarySectorLookup__c</columns>
    <columns>Primary_Sector__c</columns>
    <columns>SecondarySectorLookup__c</columns>
    <columns>Secondary_Sector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Officer_is_Running_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coverage_Team__c.FS_Coverage_Team_Member</value>
    </filters>
    <filters>
        <field>Tier__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Coverage_Team_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Last_Activity__c</field>
        <operation>lessThan</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <filters>
        <field>Last_Activity__c</field>
        <operation>equals</operation>
    </filters>
    <label>FS Coverage Calling List</label>
</ListView>