force-app/main/default/objects/Coverage_Team__c/listViews/FS_Coverage_Companies.listView-meta.xml
<ListView>
    <fullName>FS_Coverage_Companies</fullName>
    <columns>Company__c</columns>
    <columns>Officer__c</columns>
    <columns>Tier__c</columns>
    <columns>Target_Engagement_Date__c</columns>
    <columns>Estimated_EV_MM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coverage_Team_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coverage_Team__c.FS_Coverage_Team_Member</value>
    </filters>
    <label>FS Coverage Companies</label>
</ListView>